--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
             <version>7.17.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>9.2.2</version>
+        </dependency>
+
+
 
 
     </dependencies>
